keycloak/base/keycloak/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  serviceName: keycloak
  replicas: 1
  selector:
    matchLabels: { app: keycloak }
  template:
    metadata:
      labels: { app: keycloak }
    spec:
      serviceAccountName: keycloak
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak
          args: ["start"] # "--optimized"
          ports:
            - { name: http, containerPort: 8080 }
            - { name: mgmt, containerPort: 9000 }
          startupProbe:
            httpGet: {path: /health/started, port: 9000}
            periodSeconds: 1
            failureThreshold: 600
          readinessProbe:
            httpGet: { path: /health/ready, port: 9000 }
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /health/live, port: 9000 }
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests: { cpu: 500m, memory: 512Mi }
            limits: { memory: 1536Mi }
