keycloak/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: iam-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["placeholder.invalid"]
      secretName: keycloak-tls
  rules:
    - host: placeholder.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
